--- a/index.html
+++ b/index.html
@@ -45,3 +45,51 @@
     <script src="./script.js"></script>
   </body>
 </html>
+
+
+
+<!-- 
+SUdo code
+// !Set of questions array of objects
+// Each question needs the following:
+// !Question text
+// !Set of answers
+// !Which answer is correct
+
+// Landing page:
+// !Explanation of the quiz
+// !Start button
+
+// Click the start button:
+// Landing page goes away
+// Timer starts
+// The first question appears (with its answers)
+
+// For each question:
+// User clicks an answer
+// Their choice is compared to the correct answer as stored in the question's object
+// If correct, tell them
+// If incorrect, tell them AND subtract time from the timer
+// Optional: play a sound for correct or incorrect
+// Either way, the question disappears after a few seconds and the next question appears
+
+// After the last question:
+// Timer stops
+// Question disappears
+// Form appears for user to enter their initials
+// Display their score
+
+// User submits form
+// Initials and score get stored in local storage
+// User is taken to the high scores page
+// High scores are listed, sorted highest to lowest
+// User has option to take the quiz again
+
+// Home page > Welcome message 
+// Start button > need to get access to it (query selector //Get byID)
+// create even listener and attach to start button on click
+
+// When click start > hide welcome message and show quiz area
+// Create class in JS for hide/remove .remove
+
+// Questions/Choices/Answers stored as an array -->
