--- a/index.html
+++ b/index.html
@@ -14,28 +14,39 @@
     <div class="scores"><a href="./highscores.html">View Highscores</a></div>
 
     <!-- Time section -->
-    <div class="timer">Time: <span id="time">0</span></div>
+    <div class="timer">Time: <span id="time">60 s</span></div>
 
     <!-- Starter screen -->
     <section class="welcomeScreen" id="welcomeScreen">
-      <div id="start-screen" >
-        
+      <div id="start-screen">
         <h1>General knowledge Quiz Challenge</h1>
         <p id="gameInstructions">
-          Try to answer the following general knowledge questions within the time
-          limit. Keep in mind that incorrect answers will penalise your
+          Try to answer the following general knowledge questions within the
+          time limit. Keep in mind that incorrect answers will penalise your
           score/time by ten seconds. Good Luck!
         </p>
         <button class="start" id="startBtn">Start Quiz</button>
       </div>
     </section>
 
-<!-- Question section -->
-      <div id="questions" class="hide">
+    <!-- Question section & check section-->
+    <section class="questionPage" id="questionPage">
+      <div>
         <h2 id="question-title"></h2>
-        <div id="choices" class="choices"></div>
+        <ul>
+          <li><button class="buttonChoice" id="answerBtn1" value="a">Answer 1</button></li>
+          <li><button class="buttonChoice" id="answerBtn2" value="b">Answer 2</button></li>
+          <li><button class="buttonChoice" id="answerBtn3" value="c">Answer 3</button></li>
+          <li><button class="buttonChoice" id="answerBtn4" value="d">Answer 4</button></li>
+        </ul>
       </div>
 
+      <div id="checkChoice">
+        <p>Correct or Wrong Answer</p>
+      </div>
+    </section>
+
+    <div>
       <div id="end-screen" class="hide">
         <h2>All done!</h2>
         <p>Your final score is <span id="final-score"></span>.</p>
@@ -51,8 +62,6 @@
     <script src="./script.js"></script>
   </body>
 </html>
-
-
 
 <!-- 
 SUdo code
