added in function to iterate through questions and answers

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
   <body>
     <!-- Link & access to highscores section -->
-    <div class="scores"><a href="./highscores.html">View Highscores</a></div>
+    <div class="highscores"><a href="./highscores.html">View Highscores</a></div>
 
     <!-- Time section -->
     <div class="timer">Time: <span id="time">60 s</span></div>
@@ -46,10 +46,10 @@
       </div>
     </section>
 
-    <!-- End section - Finished/Done -->
+    <!-- End section - Game Over -->
     <div class="endScreen" class="endScreen">
       <div>
-        <h2 class="gameOver">All done!</h2>
+        <h2 class="gameOverText">All done!</h2>
         <p>Your final score is <span id="finalScore"></span>.</p>
         <p>
           Enter initials: <input type="text" id="initials" max="3" />
